# sublime-taskfile

./: .gitattributes  .gitignore  CHANGELOG.md  LICENSE.md  README.md  Taskfile.py  Taskfile.sublime-commands  Taskfile.yml  messages.json  pyproject.toml
messages/: 0.0.1.md  0.0.2.md  0.0.3.md  0.1.0.md  0.1.1.md  0.2.0.md  0.3.0.md  0.4.0.md  0.5.0.md  0.8.0.md
