[tool.poetry]
name = "sublime-taskfile"
version = "0.6.0"
description = "A Sublime Text 4 plugin for Taskfile management"
authors = ["Ivan Elfimov <ielfimov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]
isort = "^5.8.0"
black = "^21.5b1"
autoflake = "^1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
