[tool.poetry]
name = "sublime-taskfile"
version = "0.8.0"
description = "A Sublime Text 4 plugin for Taskfile management"
authors = ["Ivan Elfimov <ielfimov@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.8"

[tool.poetry.dev-dependencies]
isort = "5.10.1"
black = "22.8.0"
autoflake = "1.6.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
